force-app/main/default/objects/AI_Decision__c/AI_Decision__c.object-meta.xml
<CustomObject>
    <description>Permanent audit record of every AI analysis decision made by the SentinelFlow Guardian Engine.</description>
    <label>AI Decision</label>
    <nameField>
        <displayFormat>AID-{0000}</displayFormat>
        <label>AI Decision Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Decisions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>