force-app/main/default/objects/AI_Decision__c/fields/Auto_Executed__c.field-meta.xml
<CustomField>
    <fullName>Auto_Executed__c</fullName>
    <description>Whether the AI recommendation was automatically executed (true) or deferred to manual review (false).</description>
    <defaultValue>false</defaultValue>
    <label>Auto Executed</label>
    <type>Checkbox</type>
</CustomField>