force-app/main/default/objects/AI_Decision__c/fields/Confidence_Score__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Score__c</fullName>
    <description>The confidence score (0-100) assigned by the AI analysis.</description>
    <label>Confidence Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>