force-app/main/default/objects/AI_Decision__c/fields/Decision_Type__c.field-meta.xml
<CustomField>
    <fullName>Decision_Type__c</fullName>
    <description>The type of AI assessment performed.</description>
    <label>Decision Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Root Cause Analysis</fullName>
                <default>true</default>
                <label>Root Cause Analysis</label>
            </value>
            <value>
                <fullName>Recommendation</fullName>
            </value>
            <value>
                <fullName>Anomaly Detection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>