force-app/main/default/objects/AI_Decision__c/fields/Executed_Action__c.field-meta.xml
<CustomField>
    <fullName>Executed_Action__c</fullName>
    <label>Executed Action</label>
    <description>The actual action string that was executed by the Agentforce registry.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>