force-app/main/default/objects/AI_Decision__c/fields/Executed_At__c.field-meta.xml
<CustomField>
    <fullName>Executed_At__c</fullName>
    <label>Executed At</label>
    <description>Timestamp when the autonomous heal action was executed.</description>
    <type>DateTime</type>
</CustomField>