force-app/main/default/objects/AI_Decision__c/fields/Execution_Result__c.field-meta.xml
<CustomField>
    <fullName>Execution_Result__c</fullName>
    <label>Execution Result</label>
    <description>Actual outcome after autonomous heal execution (Succeeded / Failed / Pending).</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>true</default><label>Pending</label></value>
            <value><fullName>Succeeded</fullName><default>false</default><label>Succeeded</label></value>
            <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>