force-app/main/default/objects/AI_Decision__c/fields/Impact_Level__c.field-meta.xml
<CustomField>
    <fullName>Impact_Level__c</fullName>
    <description>The business impact level determined by AI analysis.</description>
    <label>Impact Level</label>
    <length>50</length>
    <type>Text</type>
</CustomField>