force-app/main/default/objects/AI_Decision__c/fields/Incident__c.field-meta.xml
<CustomField>
    <fullName>Incident__c</fullName>
    <description>The incident that was analyzed by the AI Guardian.</description>
    <label>Incident</label>
    <referenceTo>Incident__c</referenceTo>
    <relationshipLabel>AI Decisions</relationshipLabel>
    <relationshipName>AI_Decisions</relationshipName>
    <type>Lookup</type>
</CustomField>