force-app/main/default/objects/AI_Decision__c/fields/Matched_Rule__c.field-meta.xml
<CustomField>
    <fullName>Matched_Rule__c</fullName>
    <description>The Custom Metadata AI Rule keyword that matched this decision.</description>
    <label>Matched Rule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>