force-app/main/default/objects/AI_Decision__c/fields/Reasoning__c.field-meta.xml
<CustomField>
    <fullName>Reasoning__c</fullName>
    <description>The explanation or reasoning behind the AI's recommendation and confidence score.</description>
    <label>Reasoning</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>