force-app/main/default/objects/AI_Decision__c/fields/Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Recommendation__c</fullName>
    <description>The specific action recommended by the AI (e.g., Retry, Escalate).</description>
    <label>Recommendation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>