force-app/main/default/objects/AI_Decision__c/fields/Recommended_Action__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Action__c</fullName>
    <description>The action recommended by the AI Guardian engine.</description>
    <label>Recommended Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>