force-app/main/default/objects/AI_Decision__c/fields/Related_Incident__c.field-meta.xml
<CustomField>
    <fullName>Related_Incident__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The incident evaluated by the AI engine.</description>
    <label>Related Incident</label>
    <referenceTo>Incident__c</referenceTo>
    <relationshipLabel>AI Decisions (Related)</relationshipLabel>
    <relationshipName>AI_Decisions_Related</relationshipName>
    <type>Lookup</type>
</CustomField>