force-app/main/default/objects/AI_Decision__c/fields/Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause__c</fullName>
    <description>The root cause identified by the AI analysis.</description>
    <label>Root Cause</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>