force-app/main/default/objects/AI_Decision__c/fields/Tenant__c.field-meta.xml
<CustomField>
    <fullName>Tenant__c</fullName>
    <description>The tenant associated with this AI decision.</description>
    <label>Tenant</label>
    <referenceTo>Tenant__c</referenceTo>
    <relationshipLabel>AI Decisions</relationshipLabel>
    <relationshipName>AI_Decisions1</relationshipName>
    <type>Lookup</type>
</CustomField>