force-app/main/default/objects/AI_Decision__c/fields/Was_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Was_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the recommendation was accepted and executed.</description>
    <label>Was Accepted</label>
    <type>Checkbox</type>
</CustomField>